<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Francis Sergio A. Cerio</string>
    <string name="phone">Phone Call</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Android Developer</string>
    <string name="twitter">&amp;@francis_cerio</string>
    <string name="qualifications"> I am a tech-savvy person that teaches myself with codes, linux, object-oriented programming concepts, open source framework, and software development. \n\n I also have leadership and analytical skills which I earned from my previous job. </string>
    <string name="info_interests"> Interests </string>
    <string name="info_interests_description"> Software development, tech news and latest trends on the internet, personal development, and open source projects. </string>
    <string name="info_personal_details"> Personal Details </string>
    <string name="info_birthday"> Birthday </string>
    <string name="info_birthday_date"> October 2, 1990 </string>
    <string name="info_marital"> Marital Status </string>
    <string name="info_status"> Single </string>
    <string name="interests_description"> Software development, blogging, tech news and latest trends on the internet, DIYs, life hacks, personal development, open source projects, and backpacking. </string>
    <string name="textview_irender">Irender Animation Inc.</string>
    <string name="textview_irender_duration">June 2012-June 2013</string>
    <string name="textview_irender_task">• Developing Android for China and Korea\n• Suggested to use Git/SVN as the primary version control during the development\n• Customizing Android ListView, GridView, Buttons, Dialogs, TextViews, and others.\n• SQLiteDatabase, XMLParsing using SAX Parser</string>
    <string name="textview_androiddev">Android Developer</string>
    <string name="textview_workfromhome">Work From Home</string>
    <string name="textview_workfromhome_duration">Oct 2012-Jan 2013</string>
    <string name="textview_workfromhome_tasks"> • made an interactive comic book for kids\n• made a puzzle app for android based on open source puzzle library \n• made a coloring app for kids based on open source project \n• made an english grammar quiz for android tablets </string>
    <string name="textview_ojt">OJT - Creweb Design in \nDaytona Beach</string>
    <string name="textview_ojt_duration">Apr 2010-June 2010</string>
    <string name="textview_webdeveloper">Web Developer</string>
    <string name="textview_bsit">Information Technology</string>
    <string name="textview_bsit_duration">June 2007-Oct 2012</string>
    <string name="textview_graduate">Graduate</string>
    <string name="textview_usjr">University of San Jose-Recoletos</string>

</resources>